cmake_minimum_required(VERSION 3.31.6)
project(aeroport)

set(CMAKE_CXX_STANDARD 26)

add_executable(aeroport src/main.cpp
        src/users/User.cpp
        src/users/User.h
        src/tickets/Ticket.cpp
        src/tickets/Ticket.h
        src/tickets/StandardTicket.cpp
        src/tickets/StandardTicket.h
        src/tickets/LastMinuteTicket.cpp
        src/tickets/LastMinuteTicket.h
        src/tickets/VIPTicket.cpp
        src/tickets/VIPTicket.h
        src/users/Passenger.cpp
        src/users/Passenger.h
        src/users/TrafficControl.cpp
        src/users/TrafficControl.h
        src/users/AirportAuthority.cpp
        src/users/AirportAuthority.h
        src/airplanes/Airplane.cpp
        src/airplanes/Airplane.h
        src/airplanes/PassengerPlane.cpp
        src/airplanes/PassengerPlane.h
        src/airplanes/CargoPlane.cpp
        src/airplanes/CargoPlane.h
        src/airplanes/PrivateJet.cpp
        src/airplanes/PrivateJet.h
        src/core/Engine.cpp
        src/core/Engine.h
        src/operations/Airline.cpp
        src/operations/Airline.h
        src/operations/Flight.cpp
        src/operations/Flight.h
        src/facilities/Runway.cpp
        src/facilities/Runway.h
        src/facilities/Hangar.cpp
        src/facilities/Hangar.h
        src/tickets/TicketFactory.cpp
        src/tickets/TicketFactory.h
        src/facilities/RunwayBuilder.cpp
        src/facilities/RunwayBuilder.h
        src/commands/DispatcherCommands/DelayFlightCommand.cpp
        src/commands/DispatcherCommands/DelayFlightCommand.h
        src/commands/DispatcherCommand.cpp
        src/commands/DispatcherCommand.h
        src/commands/DispatcherCommands/FreeRunwayCommand.cpp
        src/commands/DispatcherCommands/FreeRunwayCommand.h
        src/commands/DispatcherCommands/AssignRunwayCommand.cpp
        src/commands/DispatcherCommands/AssignRunwayCommand.h
        src/visitors/UserVisitors/AirportReportVisitor.cpp
        src/visitors/UserVisitors/AirportReportVisitor.h
        src/observers/WeatherObserver.cpp
        src/observers/WeatherObserver.h
        src/observers/WeatherSubject.cpp
        src/observers/WeatherSubject.h
        src/observers/StormObserver.cpp
        src/observers/StormObserver.h
        src/core/SaveManager.cpp
        src/core/SaveManager.h
        src/airplanes/AirplaneFactory.cpp
        src/airplanes/AirplaneFactory.h
        src/commands/CLICommand.cpp
        src/commands/CLICommand.h
        src/commands/SystemCommands/LoginCommand.cpp
        src/commands/SystemCommands/LoginCommand.h
        src/commands/SystemCommands/HelpCommand.cpp
        src/commands/SystemCommands/HelpCommand.h
        src/commands/CommandFactory.cpp
        src/commands/CommandFactory.h
        src/commands/SystemCommands/RegisterCommand.cpp
        src/commands/SystemCommands/RegisterCommand.h
        src/commands/SystemCommands/SaveCommand.cpp
        src/commands/SystemCommands/SaveCommand.h
        src/commands/SystemCommands/LoadCommand.cpp
        src/commands/SystemCommands/LoadCommand.h
        src/commands/SystemCommands/LogoutCommand.cpp
        src/commands/SystemCommands/LogoutCommand.h
        src/commands/SystemCommands/ViewProfileCommand.cpp
        src/commands/SystemCommands/ViewProfileCommand.h
        src/commands/PassengerCommands/AddFundsCommand.cpp
        src/commands/PassengerCommands/AddFundsCommand.h
        src/commands/PassengerCommands/ListFlightsCommand.cpp
        src/commands/PassengerCommands/ListFlightsCommand.h
        src/commands/PassengerCommands/FilterFlightCommand.cpp
        src/commands/PassengerCommands/FilterFlightCommand.h
        src/commands/PassengerCommands/BookTicketCommand.cpp
        src/commands/PassengerCommands/BookTicketCommand.h
        src/commands/PassengerCommands/UpgradeTicketCommand.cpp
        src/commands/PassengerCommands/UpgradeTicketCommand.h
        src/commands/PassengerCommands/AddBaggageCommand.cpp
        src/commands/PassengerCommands/AddBaggageCommand.h
        src/commands/PassengerCommands/CancelTicketCommand.cpp
        src/commands/PassengerCommands/CancelTicketCommand.h
        src/commands/PassengerCommands/MyTicketsCommand.cpp
        src/commands/PassengerCommands/MyTicketsCommand.h
        src/commands/AdminCommands/RegisterAirlineCommand.cpp
        src/commands/AdminCommands/RegisterAirlineCommand.h
        src/commands/AdminCommands/BuyAircraftCommand.cpp
        src/commands/AdminCommands/BuyAircraftCommand.h
        src/commands/AdminCommands/SetWeatherCommand.cpp
        src/commands/AdminCommands/SetWeatherCommand.h
        src/commands/AdminCommands/AirportReportCommand.cpp
        src/commands/AdminCommands/AirportReportCommand.h
        src/commands/DispatcherCommands/ListAirspaceCommand.cpp
        src/commands/DispatcherCommands/ListAirspaceCommand.h
        src/commands/DispatcherCommands/UndoCommand.cpp
        src/commands/DispatcherCommands/UndoCommand.h
        src/commands/DispatcherCommands/ListRunwaysCommand.cpp
        src/commands/DispatcherCommands/ListRunwaysCommand.h
        src/visitors/UserVisitors/UserVisitor.cpp
        src/visitors/UserVisitors/UserVisitor.h
        src/visitors/PassengerVisitors/AddFundsVisitor.cpp
        src/visitors/PassengerVisitors/AddFundsVisitor.h
        src/visitors/PassengerVisitors/AddBaggageVisitor.cpp
        src/visitors/PassengerVisitors/AddBaggageVisitor.h
        src/visitors/PassengerVisitors/BookTicketVisitor.cpp
        src/visitors/PassengerVisitors/BookTicketVisitor.h
        src/visitors/PassengerVisitors/CancelTicketVisitor.cpp
        src/visitors/PassengerVisitors/CancelTicketVisitor.h
        src/visitors/PassengerVisitors/UpgradeTicketVisitor.cpp
        src/visitors/PassengerVisitors/UpgradeTicketVisitor.h
        src/visitors/PassengerVisitors/MyTicketsVisitor.cpp
        src/visitors/PassengerVisitors/MyTicketsVisitor.h
        src/visitors/UserVisitors/RefundVisitor.cpp
        src/visitors/UserVisitors/RefundVisitor.h
        src/visitors/AirplaneVisitors/AirplaneVisitor.cpp
        src/visitors/AirplaneVisitors/AirplaneVisitor.h
        src/commands/AdminCommands/BuildRunwayCommand.cpp
        src/commands/AdminCommands/BuildRunwayCommand.h
        src/commands/AdminCommands/BuildHangarCommand.cpp
        src/commands/AdminCommands/BuildHangarCommand.h
        src/commands/AdminCommands/CloseRunwayCommand.cpp
        src/commands/AdminCommands/CloseRunwayCommand.h
        src/commands/AdminCommands/CloneAircraftCommand.cpp
        src/commands/AdminCommands/CloneAircraftCommand.h
        src/commands/AdminCommands/SendToHangarCommand.cpp
        src/commands/AdminCommands/SendToHangarCommand.h
        src/commands/AdminCommands/RetrieveFromHangarCommand.cpp
        src/commands/AdminCommands/RetrieveFromHangarCommand.h
        src/commands/AdminCommands/ScheduleFlightCommand.cpp
        src/commands/AdminCommands/ScheduleFlightCommand.h
        src/commands/AdminCommands/FlightRevenueCommand.cpp
        src/commands/AdminCommands/FlightRevenueCommand.h
        src/commands/AdminCommands/ListFleetCommand.cpp
        src/commands/AdminCommands/ListFleetCommand.h
        src/commands/AdminCommands/AuditAirlineCommand.cpp
        src/commands/AdminCommands/AuditAirlineCommand.h
        src/commands/AdminCommands/CancelFlightCommand.cpp
        src/commands/AdminCommands/CancelFlightCommand.h
        src/visitors/AirplaneVisitors/CargoWeightVisitor.cpp
        src/visitors/AirplaneVisitors/CargoWeightVisitor.h
        src/visitors/SaveVisitors/SaveUserFundsVisitor.cpp
        src/visitors/SaveVisitors/SaveUserFundsVisitor.h
        src/visitors/SaveVisitors/SaveUserTicketsVisitor.cpp
        src/visitors/SaveVisitors/SaveUserTicketsVisitor.h
        src/visitors/AirplaneVisitors/SaveAirplaneCapacityVisitor.cpp
        src/visitors/AirplaneVisitors/SaveAirplaneCapacityVisitor.h
        src/visitors/TicketVisitors/LoadTicketVisitor.cpp
        src/visitors/TicketVisitors/LoadTicketVisitor.h
)

target_include_directories(aeroport PRIVATE src)
